// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialMedia should match the snapshot for footer 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SocialMedia
    theme="footer"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.a
          className="footerLogoA"
          href="https://github.com/isabellewis"
          target="_blank"
        >
          <styled.i
            className="fa fa-github-alt footerLogo"
          />
        </styled.a>,
        <styled.a
          className="footerLogoA"
          href="https://www.linkedin.com/in/isabel-lewis-693779139/"
          target="_blank"
        >
          <styled.i
            className="fa fa-linkedin footerLogo"
          />
        </styled.a>,
        <styled.a
          className="footerLogoA"
          href="https://twitter.com/irlewis"
          target="_blank"
        >
          <styled.i
            className="fa fa-twitter footerLogo"
          />
        </styled.a>,
        <styled.a
          className="footerLogoA"
          href="https://www.instagram.com/isabel_lewis/"
          target="_blank"
        >
          <styled.i
            className="fa fa-instagram footerLogo"
          />
        </styled.a>,
      ],
      "className": "footerLogoWrapper",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.i
            className="fa fa-github-alt footerLogo"
          />,
          "className": "footerLogoA",
          "href": "https://github.com/isabellewis",
          "target": "_blank",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "fa fa-github-alt footerLogo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.i
            className="fa fa-linkedin footerLogo"
          />,
          "className": "footerLogoA",
          "href": "https://www.linkedin.com/in/isabel-lewis-693779139/",
          "target": "_blank",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "fa fa-linkedin footerLogo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.i
            className="fa fa-twitter footerLogo"
          />,
          "className": "footerLogoA",
          "href": "https://twitter.com/irlewis",
          "target": "_blank",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "fa fa-twitter footerLogo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.i
            className="fa fa-instagram footerLogo"
          />,
          "className": "footerLogoA",
          "href": "https://www.instagram.com/isabel_lewis/",
          "target": "_blank",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "fa fa-instagram footerLogo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.a
            className="footerLogoA"
            href="https://github.com/isabellewis"
            target="_blank"
          >
            <styled.i
              className="fa fa-github-alt footerLogo"
            />
          </styled.a>,
          <styled.a
            className="footerLogoA"
            href="https://www.linkedin.com/in/isabel-lewis-693779139/"
            target="_blank"
          >
            <styled.i
              className="fa fa-linkedin footerLogo"
            />
          </styled.a>,
          <styled.a
            className="footerLogoA"
            href="https://twitter.com/irlewis"
            target="_blank"
          >
            <styled.i
              className="fa fa-twitter footerLogo"
            />
          </styled.a>,
          <styled.a
            className="footerLogoA"
            href="https://www.instagram.com/isabel_lewis/"
            target="_blank"
          >
            <styled.i
              className="fa fa-instagram footerLogo"
            />
          </styled.a>,
        ],
        "className": "footerLogoWrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.i
              className="fa fa-github-alt footerLogo"
            />,
            "className": "footerLogoA",
            "href": "https://github.com/isabellewis",
            "target": "_blank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "fa fa-github-alt footerLogo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.i
              className="fa fa-linkedin footerLogo"
            />,
            "className": "footerLogoA",
            "href": "https://www.linkedin.com/in/isabel-lewis-693779139/",
            "target": "_blank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "fa fa-linkedin footerLogo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.i
              className="fa fa-twitter footerLogo"
            />,
            "className": "footerLogoA",
            "href": "https://twitter.com/irlewis",
            "target": "_blank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "fa fa-twitter footerLogo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.i
              className="fa fa-instagram footerLogo"
            />,
            "className": "footerLogoA",
            "href": "https://www.instagram.com/isabel_lewis/",
            "target": "_blank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "fa fa-instagram footerLogo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SocialMedia should match the snapshot for header 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SocialMedia
    theme="header"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.a
          className="headerLogoA"
          href="https://github.com/isabellewis"
          target="_blank"
        >
          <styled.i
            className="fa fa-github-alt headerLogo"
          />
        </styled.a>,
        <styled.a
          className="headerLogoA"
          href="https://www.linkedin.com/in/isabel-lewis-693779139/"
          target="_blank"
        >
          <styled.i
            className="fa fa-linkedin headerLogo"
          />
        </styled.a>,
        <styled.a
          className="headerLogoA"
          href="https://twitter.com/irlewis"
          target="_blank"
        >
          <styled.i
            className="fa fa-twitter headerLogo"
          />
        </styled.a>,
        <styled.a
          className="headerLogoA"
          href="https://www.instagram.com/isabel_lewis/"
          target="_blank"
        >
          <styled.i
            className="fa fa-instagram headerLogo"
          />
        </styled.a>,
      ],
      "className": "headerLogoWrapper",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.i
            className="fa fa-github-alt headerLogo"
          />,
          "className": "headerLogoA",
          "href": "https://github.com/isabellewis",
          "target": "_blank",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "fa fa-github-alt headerLogo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.i
            className="fa fa-linkedin headerLogo"
          />,
          "className": "headerLogoA",
          "href": "https://www.linkedin.com/in/isabel-lewis-693779139/",
          "target": "_blank",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "fa fa-linkedin headerLogo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.i
            className="fa fa-twitter headerLogo"
          />,
          "className": "headerLogoA",
          "href": "https://twitter.com/irlewis",
          "target": "_blank",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "fa fa-twitter headerLogo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.i
            className="fa fa-instagram headerLogo"
          />,
          "className": "headerLogoA",
          "href": "https://www.instagram.com/isabel_lewis/",
          "target": "_blank",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "fa fa-instagram headerLogo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.a
            className="headerLogoA"
            href="https://github.com/isabellewis"
            target="_blank"
          >
            <styled.i
              className="fa fa-github-alt headerLogo"
            />
          </styled.a>,
          <styled.a
            className="headerLogoA"
            href="https://www.linkedin.com/in/isabel-lewis-693779139/"
            target="_blank"
          >
            <styled.i
              className="fa fa-linkedin headerLogo"
            />
          </styled.a>,
          <styled.a
            className="headerLogoA"
            href="https://twitter.com/irlewis"
            target="_blank"
          >
            <styled.i
              className="fa fa-twitter headerLogo"
            />
          </styled.a>,
          <styled.a
            className="headerLogoA"
            href="https://www.instagram.com/isabel_lewis/"
            target="_blank"
          >
            <styled.i
              className="fa fa-instagram headerLogo"
            />
          </styled.a>,
        ],
        "className": "headerLogoWrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.i
              className="fa fa-github-alt headerLogo"
            />,
            "className": "headerLogoA",
            "href": "https://github.com/isabellewis",
            "target": "_blank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "fa fa-github-alt headerLogo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.i
              className="fa fa-linkedin headerLogo"
            />,
            "className": "headerLogoA",
            "href": "https://www.linkedin.com/in/isabel-lewis-693779139/",
            "target": "_blank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "fa fa-linkedin headerLogo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.i
              className="fa fa-twitter headerLogo"
            />,
            "className": "headerLogoA",
            "href": "https://twitter.com/irlewis",
            "target": "_blank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "fa fa-twitter headerLogo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.i
              className="fa fa-instagram headerLogo"
            />,
            "className": "headerLogoA",
            "href": "https://www.instagram.com/isabel_lewis/",
            "target": "_blank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "fa fa-instagram headerLogo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
